SERVER-71294 Coverity analysis defect 134121: Bad bit shift operation